@@ -13,6 +13,7 @@ version <next>:
 - protocol blacklisting API
 - MediaCodec H264 decoding
 - VC-2 HQ RTP payload format (draft v1) depacketizer
+- AudioToolbox audio decoders
 
 
 version 3.0:
